<resources>
    <string name="app_name">Look Ma, No Hands! Settings</string>
    <string name="mywatch_config">Options</string>
    <string name="no_connected_device">Wearable Device Not Connected! Too Bad...</string>
    <string name="ok_button_label">OK</string>
    <string name="mywatch_config_hours">Hours</string>
    <string name="color_red">Red</string>
    <string name="color_orange">Orange</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_purple">Purple</string>
    <string name="color_white">White</string>
    <string name="mywatch_config_minutes">Minutes</string>
    <string name="mywatch_config_seconds">Seconds</string>
    <string name="mywatch_config_show_seconds">Show Seconds?</string>
    <string name="mywatch_config_footpath">Footpath/Step Count</string>
    <string name="mywatch_config_show_date">Show Date?</string>
    <string name="mywatch_config_show_footpath">Show Footpath?</string>
    <string name="mywatch_config_show_stepcount">Show Step Count?</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="general_settings">General Settings</string>
    <string name="color_settings">Colors</string>
    <string name="show_seconds">Show Seconds?</string>
    <string name="show_date">Show Date?</string>
    <string name="show_footpath">Show Footpath?</string>
    <string name="show_stepcount">Show Step Count?</string>
    <string name="step_count_goal">Step Count Goal</string>
    <string name="color_config">Colors</string>
    <string name="color_schemes">Presets</string>
    <string name="ten_thousand">10000</string>

    <string-array name="color_array">
        <item>@string/color_red</item>
        <item>@string/color_orange</item>
        <item>@string/color_yellow</item>
        <item>@string/color_green</item>
        <item>@string/color_blue</item>
        <item>@string/color_purple</item>
        <item>@string/color_white</item>
    </string-array>

    <string-array name="stepcount_goal_entries">
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
        <item>9000</item>
        <item>10000</item>
        <item>11000</item>
        <item>12000</item>
        <item>13000</item>
        <item>14000</item>
        <item>15000</item>
        <item>16000</item>
        <item>17000</item>
        <item>18000</item>
        <item>19000</item>
        <item>20000</item>
    </string-array>

    <string-array name="color_scheme_entries">
        <item>Custom</item>
        <item>Nature</item>
        <item>Fresh</item>
        <item>Icy</item>
        <item>Nautical</item>
        <item>Grays</item>
        <item>Browns</item>
        <item>Greece</item>
        <item>Pastels</item>
        <item>Mikah\'s Colors</item>
        <item>Rachael\'s Colors</item>
        <item>Alabama</item>
        <item>Clemson</item>
        <item>Cornell University</item>
        <item>Harvard</item>
        <item>Ithaca College</item>
        <item>JMU</item>
        <item>Northwestern</item>
        <item>The Ohio State</item>
        <item>Penn State</item>
        <item>UCLA</item>
        <item>U Kansas</item>
        <item>U Kentucky</item>
        <item>UVA</item>
        <item>Virginia Tech</item>
        <item>WVU</item>
        <item>William and Mary</item>
    </string-array>
</resources>
